--- a/example/src/main/resources/application.conf
+++ b/example/src/main/resources/application.conf
@@ -6,7 +6,7 @@ ktor {
         port = ${?APP_PORT}
     }
     application {
-        modules = [ io.github.dehuckakpyt.telegrambot.AppKt.module ]
+        modules = [ io.github.dehuckakpyt.telegrambotexample.AppKt.module ]
     }
 }
 
