пример обработчиков по типу сообщения

--- a/example/src/main/resources/application.conf
+++ b/example/src/main/resources/application.conf
@@ -15,11 +15,18 @@ telegram-bot {
     username = ${TELEGRAM_BOT_USERNAME}
 
     template {
-        start = "Стартовая команда"
+        start = "Стартовая команда."
+
         chain = "Давай поиграем. Напиши любое целое положительное число."
         chain-start-sum = "Теперь я буду складывать введённые числа, пока сумма их не станет больше или равна ${target}."
-        chain-one-more = "Текущая сумма равна ${sum}. Цель: ${target}"
+        chain-one-more = "Текущая сумма равна ${sum}. Цель: ${target}."
         chain-end = "Цель ${target} достигнута! Набрана сумма ${sum}."
+
+        register = "Для регистрации введите номер или поделитесь своим контактом."
+        register-contact-button = "Поделиться контактом"
+        register-complete = "${firstName}, Вы успешно зарегистрировались по номеру ${phoneNumber}!"
+        register-wrong-phone-format = "Неверный формат номера телефона."
+        register-get-firstname = "Напишите, как к Вам обращаться."
     }
 }
 
