--- a/example/src/main/resources/application.conf
+++ b/example/src/main/resources/application.conf
@@ -27,6 +27,8 @@ telegram-bot {
         register-complete = "${firstName}, Вы успешно зарегистрировались по номеру ${phoneNumber}!"
         register-wrong-phone-format = "Неверный формат номера телефона."
         register-get-firstname = "Напишите, как к Вам обращаться."
+
+        runner-notify-when-started = "Бот <b><u>${botUsername}</u></b> запущен!"
     }
 }
 
