добавлены методы escapeHtml и cleanHtml в шаблон

--- a/example/src/main/resources/application.conf
+++ b/example/src/main/resources/application.conf
@@ -28,6 +28,9 @@ telegram-bot {
         register-wrong-phone-format = "Неверный формат номера телефона."
         register-get-firstname = "Напишите, как к Вам обращаться."
 
+        template-example = "formatted text: ${cleanHtml(param)}"
+        template-escaped-example = "formatted text: ${escapeHtml(param)}"
+
         runner-notify-when-started = "Бот <b><u>${botUsername}</u></b> запущен!"
     }
 }
