теперь бота можно создавать без ktor+koin

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 ktor_version=2.2.3
 koin_version=3.4.1
 kotlin_version=1.8.22
+jackson_version=2.16.0
 
 kotlin.code.style=official
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
