отрефакторены конфиги, и теперь можно создавать BotHandler'ы снова

--- a/example-ktor/src/main/resources/application.conf
+++ b/example-ktor/src/main/resources/application.conf
@@ -6,7 +6,7 @@ ktor {
         port = ${?APP_PORT}
     }
     application {
-        modules = [ io.github.dehuckakpyt.telegrambotexample.AppKt.module ]
+        modules = [ io.github.dehuckakpyt.telegrambotexample.KtorAppKt.module ]
     }
 }
 
