перенесено немного документации в Writerside

--- a/example-ktor/src/main/resources/application.conf
+++ b/example-ktor/src/main/resources/application.conf
@@ -15,11 +15,11 @@ telegram-bot {
     username = ${TELEGRAM_BOT_USERNAME}
 
     template {
-        start = "Стартовая команда."
+        start = "Start command."
 
-        chain = "Давай поиграем. Напиши любое целое положительное число."
-        chain-start-sum = "Теперь я буду складывать введённые числа, пока сумма их не станет больше или равна ${target}."
-        chain-one-more = "Текущая сумма равна ${sum}. Цель: ${target}."
+        chain = "Let's play a game. Write any positive integer."
+        chain-start-sum = "I will now add the numbers entered until the sum of them is greater than or equal to ${target}."
+        chain-one-more = "The current amount is ${sum}. Target: ${target}."
         chain-end = "Цель ${target} достигнута! Набрана сумма ${sum}."
 
         register = "Для регистрации введите номер или поделитесь своим контактом."
