--- a/Writerside/writerside.cfg
+++ b/Writerside/writerside.cfg
@@ -3,6 +3,6 @@
 
 <ihp version="2.0">
     <topics dir="topics" web-path="topics"/>
-    <images dir="images" web-path="images"/>
+    <images dir="images" web-path="telegram-bot"/>
     <instance src="ktb.tree" web-path="/ktb/" version="0.6.0"/>
 </ihp>
