jpa works. need to update docs

--- a/example-ktor/src/main/resources/application.conf
+++ b/example-ktor/src/main/resources/application.conf
@@ -36,7 +36,7 @@ telegram-bot {
 }
 
 database {
-    url = "jdbc:postgresql://localhost:5432/example_bot"
+    url = "jdbc:postgresql://localhost:5432/example_ktor_bot"
     url = ${?DATA_SOURCE_URL}
     username = postgres
     username = ${?DATA_SOURCE_USERNAME}
