--- a/example-spring/src/main/resources/application.properties
+++ b/example-spring/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.jpa.database=POSTGRESQL
 spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/example_spring_bot
-spring.datasource.username=${DATASOURCE_USERNAME}
-spring.datasource.password=${DATASOURCE_PASSWORD}
+spring.datasource.username=postgres
+spring.datasource.password=11
