--- a/example-spring/src/main/resources/application.yml
+++ b/example-spring/src/main/resources/application.yml
@@ -3,20 +3,20 @@ telegram-bot:
   token: ${TELEGRAM_BOT_TOKEN}
   username: ${TELEGRAM_BOT_USERNAME}
   template:
-    start: "Стартовая команда."
+    start: "Start command."
 
-    chain: "Давай поиграем. Напиши любое целое положительное число."
-    chain-start-sum: "Теперь я буду складывать введённые числа, пока сумма их не станет больше или равна ${dollar}{target}."
-    chain-one-more: "Текущая сумма равна ${dollar}{sum}. Цель: ${dollar}{target}."
-    chain-end: "Цель ${dollar}{target} достигнута! Набрана сумма ${dollar}{sum}."
+    chain: "Let's play a game. Write any positive integer."
+    chain-start-sum: "Now I will add the numbers you enter until the sum of them is greater than or equal to ${dollar}{target}."
+    chain-one-more: "The current sum is ${dollar}{sum}. Target: ${dollar}{target}."
+    chain-end: "Goal ${dollar}{target} has been reached! ${dollar}{sum} has been reached."
 
-    register: "Для регистрации введите номер или поделитесь своим контактом."
-    register-contact-button: "Поделиться контактом"
-    register-complete: "${dollar}{firstName}, Вы успешно зарегистрировались по номеру ${dollar}{phoneNumber}!"
-    register-wrong-phone-format: "Неверный формат номера телефона."
-    register-get-firstname: "Напишите, как к Вам обращаться."
+    register: "To register, enter a number or share your contact."
+    register-contact-button: "Share a contact."
+    register-complete: "${dollar}{firstName}, you have successfully registered with ${dollar}{phoneNumber}!"
+    register-wrong-phone-format: "Incorrect phone number format."
+    register-get-firstname: "Write how to address you."
 
     template-example: "formatted text: ${dollar}{cleanHtml(param)}"
     template-escaped-example: "formatted text: ${dollar}{escapeHtml(param)}"
 
-    runner-notify-when-started: "Бот <b><u>${dollar}{botUsername}</u></b> запущен!"
+    runner-notify-when-started: "Bot <b><u>${dollar}{botUsername}</u></b> started!"
