--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,10 @@
+kotlin_version=1.8.22
+
+kotlin_coroutines_version=1.7.3
 spring_version=3.2.1
 spring2_version=2.7.18
 ktor_version=2.3.10
 koin_version=3.4.1
-kotlin_version=1.8.22
 jackson_version=2.16.0
 
 kotlin.code.style=official
