--- a/Writerside/writerside.cfg
+++ b/Writerside/writerside.cfg
@@ -4,5 +4,5 @@
 <ihp version="2.0">
     <topics dir="topics" web-path="topics"/>
     <images dir="images" web-path="telegram-bot"/>
-    <instance src="ktb.tree" web-path="/ktb/" version="0.9.2a"/>
+    <instance src="ktb.tree" web-path="/ktb/" version="0.9.3"/>
 </ihp>
