Translated MessageTemplate. Added possibility to set exception messages by properties for Spring and Ktor.

--- a/example-ktor/src/main/resources/application.conf
+++ b/example-ktor/src/main/resources/application.conf
@@ -32,6 +32,8 @@ telegram-bot {
         template-escaped-example = "formatted text: ${escapeHtml(param)}"
 
         runner-notify-when-started = "Бот <b><u>${botUsername}</u></b> запущен!"
+
+        when-command-not-found = "Command ${command} not found"
     }
 }
 
