--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -19,7 +19,7 @@ env:
   # Replace HI with the ID of the instance in capital letters
   ARTIFACT: webHelpKTB2-all.zip
   # Writerside docker image version
-  DOCKER_VERSION: 242.21870
+  DOCKER_VERSION: '242.21870'
 
 jobs:
   build:
