--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,7 @@
-kotlin_version=1.8.22
-
-kotlin_coroutines_version=1.7.3
-spring_version=3.3.2
-spring2_version=2.7.18
-ktor_version=2.3.12
-koin_version=3.4.1
-jackson_version=2.16.0
-
 kotlin.code.style=official
-org.gradle.jvmargs=-Dfile.encoding=UTF-8
-systemProp.org.gradle.jvmargs=-Dfile.encoding=UTF-8
+
+org.gradle.daemon=true
+org.gradle.configureondemand=true
+org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.jvmargs=-Xmx2048m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
