Adding saving users and chats for exposed and spring3-jpa

--- a/example-spring/src/main/resources/application.yml
+++ b/example-spring/src/main/resources/application.yml
@@ -2,6 +2,11 @@ dollar: $
 telegram-bot:
   token: ${TELEGRAM_BOT_TOKEN}
   username: ${TELEGRAM_BOT_USERNAME}
+
+  source-jpa:
+    chat-source.enabled: true
+    chat-status-event-source.enabled: true
+
   template:
     start: "Start command."
 
