--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,7 +6,7 @@ org-jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kot
 org-jetbrains-kotlin-plugin-spring = { id = "org.jetbrains.kotlin.plugin.spring", version.ref = "kotlin" }
 org-jetbrains-kotlin-plugin-jpa = { id = "org.jetbrains.kotlin.plugin.jpa", version.ref = "kotlin" }
 
-org-springframework-boot = { id = "org.springframework.boot", version.ref = "spring" }
+org-springframework-boot = { id = "org.springframework.boot", version.ref = "spring-boot" }
 
 com-google-devtools-ksp = { id = "com.google.devtools.ksp", version.ref = "google-ksp" }
 
@@ -20,13 +20,15 @@ kotlinx-coroutines = "1.10.2"
 google-ksp = "2.2.21-2.0.4"
 ktor = "3.3.2"
 jackson = "2.20.1"
-spring = "3.5.5"
+spring-boot = "3.5.5"
+spring-framework = "6.5.6"
 koin = "4.1.1"
 koin-additional = "2.3.1"
 jetbrains-exposed = "0.61.0"
-hypersistence = "3.11.0"
+hypersistence = "3.12.0"
 kotest = "6.0.4"
 kotest-extensions-spring = "1.3.0"
+mapstruct = "1.6.3"
 mockk = "1.14.6"
 
 [libraries]
@@ -58,11 +60,13 @@ jackson-databind = { group = "com.fasterxml.jackson.core", name = "jackson-datab
 jackson-module-kotlin = { group = "com.fasterxml.jackson.module", name = "jackson-module-kotlin", version.ref = "jackson" }
 jackson-datatype-jsr310 = { group = "com.fasterxml.jackson.datatype", name = "jackson-datatype-jsr310", version.ref = "jackson" }
 
-spring-boot-starter = { group = "org.springframework.boot", name = "spring-boot-starter", version.ref = "spring" }
-spring-boot-starter-webflux = { group = "org.springframework.boot", name = "spring-boot-starter-webflux", version.ref = "spring" }
-spring-boot-starter-data-jpa = { group = "org.springframework.boot", name = "spring-boot-starter-data-jpa", version.ref = "spring" }
-spring-boot-starter-test = { group = "org.springframework.boot", name = "spring-boot-starter-test", version.ref = "spring" }
-spring-data-jpa = { group = "org.springframework.data", name = "spring-data-jpa", version.ref = "spring" }
+spring-boot-starter = { group = "org.springframework.boot", name = "spring-boot-starter", version.ref = "spring-boot" }
+spring-boot-starter-webflux = { group = "org.springframework.boot", name = "spring-boot-starter-webflux", version.ref = "spring-boot" }
+spring-boot-starter-data-jpa = { group = "org.springframework.boot", name = "spring-boot-starter-data-jpa", version.ref = "spring-boot" }
+spring-boot-starter-test = { group = "org.springframework.boot", name = "spring-boot-starter-test", version.ref = "spring-boot" }
+spring-data-jpa = { group = "org.springframework.data", name = "spring-data-jpa", version.ref = "spring-boot" }
+
+spring-security-core = { group = "org.springframework.security", name = "spring-security-core", version.ref = "spring-framework" }
 
 koin-ktor = { group = "io.insert-koin", name = "koin-ktor", version.ref = "koin" }
 koin-logger-slf4j = { group = "io.insert-koin", name = "koin-logger-slf4j", version.ref = "koin" }
@@ -79,13 +83,16 @@ hypersistence-utils-hibernate-v63 = { group = "io.hypersistence", name = "hypers
 kotest-runner-junit5 = { group = "io.kotest", name = "kotest-runner-junit5", version.ref = "kotest" }
 kotest-extensions-spring = { group = "io.kotest.extensions", name = "kotest-extensions-spring", version.ref = "kotest-extensions-spring" }
 
+mapstruct = { group = "org.mapstruct", name = "mapstruct", version.ref = "mapstruct" }
+mapstruct-processor = { group = "org.mapstruct", name = "mapstruct-processor", version.ref = "mapstruct" }
+
 mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk" }
 
-logback-classic = "ch.qos.logback:logback-classic:1.5.20"
+logback-classic = "ch.qos.logback:logback-classic:1.5.21"
 slf4j-nop = "org.slf4j:slf4j-nop:2.0.17"
 jsoup = "org.jsoup:jsoup:1.21.2"
 org-postgresql-postgresql = "org.postgresql:postgresql:42.7.8"
-hibernate-core = "org.hibernate:hibernate-core:7.1.7.Final"
+hibernate-core = "org.hibernate:hibernate-core:7.1.8.Final"
 hikaricp = "com.zaxxer:HikariCP:7.0.2"
 freemarker = "org.freemarker:freemarker:2.3.34"
 springmockk = "com.ninja-squad:springmockk:4.0.2"
