--- a/telegram-bot-admin-ui-spring/src/main/webapp/package.json
+++ b/telegram-bot-admin-ui-spring/src/main/webapp/package.json
@@ -10,8 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.7",
+    "@mui/material": "^7.3.7",
+    "@mui/x-data-grid": "^8.26.0",
+    "@nanostores/react": "^1.0.0",
+    "@types/qs": "^6.14.0",
+    "axios": "^1.13.2",
+    "nanostores": "^1.1.0",
+    "qs": "^6.14.1",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
