--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,18 +18,18 @@ io-spring-dependency-management = { id = "io.spring.dependency-management", vers
 kotlin = "2.2.21"
 kotlinx-coroutines = "1.10.2"
 google-ksp = "2.2.21-2.0.4"
-ktor = "3.3.3"
-jackson = "2.20.1"
+ktor = "3.4.0"
+jackson = "2.21.0"
 spring-boot = "3.5.7"
 spring-framework = "6.5.6"
 koin = "4.1.1"
 koin-additional = "2.3.1"
-jetbrains-exposed = "0.61.0"
-hypersistence = "3.14.1"
-kotest = "6.0.7"
+jetbrains-exposed = "1.0.0"
+hypersistence = "3.15.1"
+kotest = "6.1.2"
 kotest-extensions-spring = "1.3.0"
 mapstruct = "1.6.3"
-mockk = "1.14.7"
+mockk = "1.14.9"
 
 node = "24.11.1"
 npm = "11.6.2"
@@ -80,6 +80,7 @@ koin-ksp-compiler = { group = "io.insert-koin", name = "koin-ksp-compiler", vers
 exposed-core = { group = "org.jetbrains.exposed", name = "exposed-core", version.ref = "jetbrains-exposed" }
 exposed-dao = { group = "org.jetbrains.exposed", name = "exposed-dao", version.ref = "jetbrains-exposed" }
 exposed-jdbc = { group = "org.jetbrains.exposed", name = "exposed-jdbc", version.ref = "jetbrains-exposed" }
+exposed-migration-jdbc = { group = "org.jetbrains.exposed", name = "exposed-migration-jdbc", version.ref = "jetbrains-exposed" }
 exposed-java-time = { group = "org.jetbrains.exposed", name = "exposed-java-time", version.ref = "jetbrains-exposed" }
 
 hypersistence-utils-hibernate-v63 = { group = "io.hypersistence", name = "hypersistence-utils-hibernate-63", version.ref = "hypersistence" }
@@ -92,11 +93,11 @@ mapstruct-processor = { group = "org.mapstruct", name = "mapstruct-processor", v
 
 mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk" }
 
-logback-classic = "ch.qos.logback:logback-classic:1.5.24"
+logback-classic = "ch.qos.logback:logback-classic:1.5.27"
 slf4j-nop = "org.slf4j:slf4j-nop:2.0.17"
 jsoup = "org.jsoup:jsoup:1.22.1"
 org-postgresql-postgresql = "org.postgresql:postgresql:42.7.9"
-hibernate-core = "org.hibernate:hibernate-core:7.2.1.Final"
+hibernate-core = "org.hibernate:hibernate-core:7.2.3.Final"
 hikaricp = "com.zaxxer:HikariCP:7.0.2"
 freemarker = "org.freemarker:freemarker:2.3.34"
 springmockk = "com.ninja-squad:springmockk:5.0.1"
